[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/gn_vn/engine/ui/vn_hud.gd" id="1"]

[node name="VNHUD" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_constants/separation = 10
alignment = 2

[node name="SaveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="SettingsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Quit"

